Fix HTML structure and duplicate viewport meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rafael Ramos</title>
     <link rel="stylesheet" href="main.css">
     <script src="main.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <audio id="bg-music" autoplay muted loop>
@@ -40,4 +41,3 @@
         <p class="typing">> Music: Never Fade Away</p>
     </div>
 </body>
-</html>
