Add AboutMe link to terminal in index.html
Added link to AboutMe.exe in the terminal section.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             > Contact.txt
         </a>
         <a href="socials.html" class="terminal-link typing-link">> Socials.txt</a>
+        <a href="aboutme.html" class="terminal-link typing-link">> AboutMe.exe</a>
         <p class="typing">> Music: Never Fade Away</p>
     </div>
 </body>
