Fix HTML structure and formatting issues

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@ window.addEventListener("load", function() {
         <p class="typing">> Country = Brazil</p>
         <p class="typing">-------------</p>
         <p class="typing">> "langspoken": </p>
-        <p" class="typing-">>   -  English</p>
+        <p class="typing-">>   -  English</p>
         <p class="typing">>   -  Portuguese</p>
         <p class="typing">-------------</p>
         <p class="typing">Studying:</p>
@@ -47,4 +47,5 @@ window.addEventListener("load", function() {
 
 
 </body>
+
 </html>
