Fix spelling and clean up HTML structure
Corrected spelling of 'LangSpoken' and removed extra closing tags.

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@ window.addEventListener("load", function() {
         <p class="typing">> BornIn = 2007 / 02/Aug</p>
         <p class="typing">> Country = Brazil</p>
         <p class="typing">-------------</p>
-        <p class="typing">> "langspoken": </p>
+        <p class="typing">> "LangSpoken": </p>
         <p class="typing-">>   -  English</p>
         <p class="typing">>   -  Portuguese</p>
         <p class="typing">-------------</p>
@@ -49,3 +49,4 @@ window.addEventListener("load", function() {
 </body>
 
 </html>
+
