--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@ window.addEventListener("load", function() {
         <p class="typing">> Country = Brazil</p>
         <p class="typing">-------------</p>
         <p class="typing">> "LangSpoken": </p>
-        <p class="typing-">>   -  English</p>
+        <p class="typing">>   -  English</p>
         <p class="typing">>   -  Portuguese</p>
         <p class="typing">-------------</p>
         <p class="typing">Studying:</p>
@@ -49,4 +49,5 @@ window.addEventListener("load", function() {
 </body>
 
 </html>
+
 
