Add GitHub link to socials.html
Added GitHub link to the socials section.

--- a/socials.html
+++ b/socials.html
@@ -23,6 +23,9 @@
         <a href="https://steamcommunity.com/profiles/76561199469533552/" class="terminal-link typing-link" target="_blank">
             > Steam
         </a>
+        <a href="https://github.com/Raafakkj" class="terminal-link typing-link" target="_blank">
+            > Github
+        </a>
         <p class="typing"></p>
         <a href="index.html" class="terminal-link typing-cd">
             > cd
@@ -30,3 +33,4 @@
     </div>
 </body>
 </html>
+
